improved bin mapping

--- a/Scripts/tests_notebook.ipynb
+++ b/Scripts/tests_notebook.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "59fe95d1",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "from sklearn.preprocessing import OneHotEncoder\n"
+    "import pandas as pd\n"
    ]
   },
   {
