created model data file

--- a/Scripts/tests_notebook.ipynb
+++ b/Scripts/tests_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "59fe95d1",
    "metadata": {},
    "outputs": [],
@@ -426,8 +426,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "42a24ff4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_dir = \"/home/cara/Documents/reddit_analyses/thread-size/Test_outputs\"\n",
+    "for subreddit in ['politics', 'crypto']:\n",
+    "    root_dir = f\"/home/cara/Documents/reddit_analyses/thread-size/Outputs/Preprocessing/{subreddit}\"\n",
+    "    for filename in [f\"{subreddit}_test_X.parquet\", f\"{subreddit}_test_Y.parquet\", f\"{subreddit}_train_X.parquet\", f\"{subreddit}_train_Y.parquet\"]:\n",
+    "        df = pd.read_parquet(f\"{root_dir}/{filename}\").head(500)\n",
+    "        df.to_parquet(f\"{out_dir}/{filename}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f6d6b5b",
    "metadata": {},
    "outputs": [],
    "source": []
