added additional class breakdown and shap plots

--- a/Scripts/tests_notebook.ipynb
+++ b/Scripts/tests_notebook.ipynb
@@ -441,8 +441,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4f6d6b5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "84af9e76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cm_dict = joblib.load(\"/home/cara/Documents/reddit_analyses/thread-size/Test_outputs/1_Thread_Start/politics/4_model/model_1/model_data/test_confusion_matrix_data.jl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "9777d975",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_correct_classes(cm):\n",
+    "    class_correct = []\n",
+    "    for i in range(0,len(cm)):\n",
+    "        class_correct.append(cm[i,i]/sum(cm[i,:]))\n",
+    "    return class_correct\n",
+    "\n",
+    "def get_true_class_counts(cm):\n",
+    "    class_counts = []\n",
+    "    for i in range(0, len(cm)):\n",
+    "        class_counts.append(sum(cm[i,:]))\n",
+    "    return class_counts\n",
+    "\n",
+    "def get_predicted_class_counts(cm):\n",
+    "    class_counts = []\n",
+    "    for i in range(0, len(cm)):\n",
+    "        class_counts.append(sum(cm[:,i]))\n",
+    "    return class_counts\n",
+    "\n",
+    "def get_predicted_class_ratios_df(cm_dict):\n",
+    "    pred_class_ratios = {}\n",
+    "    for k, cm in cm_dict.items():\n",
+    "        pred_class_ratios[k] = get_predicted_class_counts(cm)/cm_dict['CM'].sum()\n",
+    "    true_class_ratios = get_true_class_counts(cm_dict['CM'])/cm_dict['CM'].sum()\n",
+    "    return pred_class_ratios, true_class_ratios\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "09469b4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_class_ratios, true_class_ratios = get_predicted_class_ratios_df(cm_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "aa0523ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'lower': array([0.37275, 0.4996 ]),\n",
+       " 'upper': array([0.49715, 0.62385]),\n",
+       " 'mean': array([0.4345, 0.5655]),\n",
+       " 'std': array([0.03795131, 0.03648622]),\n",
+       " 'CM': array([0.43, 0.57])}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred_class_ratios"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f649f1cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_predicted_class_ratios_df(cm_dict):\n",
+    "    pred_class_ratios = {}\n",
+    "    for k, cm in cm_dict.items():\n",
+    "        pred_class_ratios[k] = get_predicted_class_counts(cm)/cm_dict['CM'].sum()\n",
+    "    true_class_ratios = get_true_class_counts(cm_dict['CM'])/cm_dict['CM'].sum()\n",
+    "    df = pd.concat([pd.DataFrame(pred_class_ratios),pd.DataFrame(true_class_ratios)], axis=1).rename(columns={\n",
+    "        \"CM\": \"predicted\",\n",
+    "        0: \"true\"\n",
+    "    })\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "4df46d33",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lower</th>\n",
+       "      <th>upper</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>predicted</th>\n",
+       "      <th>true</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.37275</td>\n",
+       "      <td>0.49715</td>\n",
+       "      <td>0.4345</td>\n",
+       "      <td>0.037951</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>0.278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.49960</td>\n",
+       "      <td>0.62385</td>\n",
+       "      <td>0.5655</td>\n",
+       "      <td>0.036486</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>0.722</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     lower    upper    mean       std  predicted   true\n",
+       "0  0.37275  0.49715  0.4345  0.037951       0.43  0.278\n",
+       "1  0.49960  0.62385  0.5655  0.036486       0.57  0.722"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_predicted_class_ratios_df(cm_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "089057a5",
    "metadata": {},
    "outputs": [],
    "source": []
