squashed bugs during testing

--- a/Scripts/tests_notebook.ipynb
+++ b/Scripts/tests_notebook.ipynb
@@ -453,17 +453,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "84af9e76",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cm_dict = joblib.load(\"/home/cara/Documents/reddit_analyses/thread-size/Test_outputs/1_Thread_Start/politics/4_model/model_1/model_data/test_confusion_matrix_data.jl\")"
+    "cm_dict = joblib.load(\"/home/cara/Documents/reddit_analyses/thread-size/Test_outputs/2_Thread_Size/conspiracy/4_model/model_1/model_data/test_confusion_matrix_data.jl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "9777d975",
    "metadata": {},
    "outputs": [],
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "09469b4c",
    "metadata": {},
    "outputs": [],
@@ -507,21 +507,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "id": "aa0523ed",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'lower': array([0.37275, 0.4996 ]),\n",
-       " 'upper': array([0.49715, 0.62385]),\n",
-       " 'mean': array([0.4345, 0.5655]),\n",
-       " 'std': array([0.03795131, 0.03648622]),\n",
-       " 'CM': array([0.43, 0.57])}"
+       "{'CM': array([0.   , 0.38 , 0.185, 0.435]),\n",
+       " 'lower': array([0.      , 0.241125, 0.091875, 0.27375 ]),\n",
+       " 'upper': array([0.     , 0.51575, 0.2805 , 0.56625]),\n",
+       " 'mean': array([0.     , 0.38675, 0.18375, 0.4295 ]),\n",
+       " 'std': array([0.        , 0.08037691, 0.05740983, 0.08647887])}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "id": "f649f1cf",
    "metadata": {},
    "outputs": [],
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "id": "4df46d33",
    "metadata": {},
    "outputs": [
@@ -576,44 +576,64 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>predicted</th>\n",
        "      <th>lower</th>\n",
        "      <th>upper</th>\n",
        "      <th>mean</th>\n",
        "      <th>std</th>\n",
-       "      <th>predicted</th>\n",
        "      <th>true</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.37275</td>\n",
-       "      <td>0.49715</td>\n",
-       "      <td>0.4345</td>\n",
-       "      <td>0.037951</td>\n",
-       "      <td>0.43</td>\n",
-       "      <td>0.278</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.49960</td>\n",
-       "      <td>0.62385</td>\n",
-       "      <td>0.5655</td>\n",
-       "      <td>0.036486</td>\n",
-       "      <td>0.57</td>\n",
-       "      <td>0.722</td>\n",
+       "      <td>0.380</td>\n",
+       "      <td>0.241125</td>\n",
+       "      <td>0.51575</td>\n",
+       "      <td>0.38675</td>\n",
+       "      <td>0.080377</td>\n",
+       "      <td>0.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.185</td>\n",
+       "      <td>0.091875</td>\n",
+       "      <td>0.28050</td>\n",
+       "      <td>0.18375</td>\n",
+       "      <td>0.057410</td>\n",
+       "      <td>0.26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.435</td>\n",
+       "      <td>0.273750</td>\n",
+       "      <td>0.56625</td>\n",
+       "      <td>0.42950</td>\n",
+       "      <td>0.086479</td>\n",
+       "      <td>0.26</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     lower    upper    mean       std  predicted   true\n",
-       "0  0.37275  0.49715  0.4345  0.037951       0.43  0.278\n",
-       "1  0.49960  0.62385  0.5655  0.036486       0.57  0.722"
+       "   predicted     lower    upper     mean       std  true\n",
+       "0      0.000  0.000000  0.00000  0.00000  0.000000  0.14\n",
+       "1      0.380  0.241125  0.51575  0.38675  0.080377  0.34\n",
+       "2      0.185  0.091875  0.28050  0.18375  0.057410  0.26\n",
+       "3      0.435  0.273750  0.56625  0.42950  0.086479  0.26"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,8 +644,310 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "089057a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def misclassified(i, j, cm_dict):\n",
+    "    \"\"\"Class i misclassified as class j in given confusion matrix cm.\n",
+    "\n",
+    "    Args:\n",
+    "        i int: integer associated with class\n",
+    "        j int: integer associated with class\n",
+    "        cm pd.DataFrame: confusion matrix\n",
+    "    \"\"\"\n",
+    "    true_class_counts = get_true_class_counts(cm_dict[\"CM\"])[i]\n",
+    "    misclassified_dict = {\n",
+    "        f\"misclassified\": np.sum(cm_dict['CM'][i, j])/true_class_counts,\n",
+    "    }\n",
+    "    for m in [\"lower\", \"upper\"]:\n",
+    "        misclassified_dict[f\"misclassified_{m}\"] = np.sum(cm_dict[m][i, j])/true_class_counts\n",
+    "    return misclassified_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "b414d458",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>misclassified</th>\n",
+       "      <th>misclassified_lower</th>\n",
+       "      <th>misclassified_upper</th>\n",
+       "      <th>Origin</th>\n",
+       "      <th>Destination</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.357143</td>\n",
+       "      <td>0.195536</td>\n",
+       "      <td>0.501786</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   misclassified  misclassified_lower  misclassified_upper  Origin  \\\n",
+       "0       0.357143             0.195536             0.501786       0   \n",
+       "\n",
+       "   Destination  \n",
+       "0            1  "
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = (pd.DataFrame.from_dict(misclassified(0,1, cm_dict),orient='index').T)\n",
+    "df['Origin'] = 0\n",
+    "df['Destination'] = 1\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "a5c6a82c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(cm_dict['CM'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "109d7d18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rows = []\n",
+    "for i in range(0,len(cm_dict['CM'])):\n",
+    "    for j in [x for x in range(0, len(cm_dict['CM'])) if x != i]:\n",
+    "        df = pd.DataFrame.from_dict(misclassified(i,j, cm_dict),orient='index').T\n",
+    "        df['Origin'] = i\n",
+    "        df['Destination'] = j\n",
+    "        rows.append(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "a8abdbd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Origin</th>\n",
+       "      <th>Destination</th>\n",
+       "      <th>misclassified</th>\n",
+       "      <th>misclassified_lower</th>\n",
+       "      <th>misclassified_upper</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.357143</td>\n",
+       "      <td>0.195536</td>\n",
+       "      <td>0.501786</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.107143</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.178571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.535714</td>\n",
+       "      <td>0.302679</td>\n",
+       "      <td>0.733036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.147059</td>\n",
+       "      <td>0.051103</td>\n",
+       "      <td>0.184191</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.382353</td>\n",
+       "      <td>0.248529</td>\n",
+       "      <td>0.509926</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.365385</td>\n",
+       "      <td>0.228846</td>\n",
+       "      <td>0.480769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.442308</td>\n",
+       "      <td>0.325962</td>\n",
+       "      <td>0.557692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.288462</td>\n",
+       "      <td>0.151923</td>\n",
+       "      <td>0.413942</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.269231</td>\n",
+       "      <td>0.192308</td>\n",
+       "      <td>0.433173</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Origin  Destination  misclassified  misclassified_lower  \\\n",
+       "0        0            1       0.357143             0.195536   \n",
+       "1        0            2       0.107143             0.000000   \n",
+       "2        0            3       0.535714             0.302679   \n",
+       "3        1            0       0.000000             0.000000   \n",
+       "4        1            2       0.147059             0.051103   \n",
+       "5        1            3       0.382353             0.248529   \n",
+       "6        2            0       0.000000             0.000000   \n",
+       "7        2            1       0.365385             0.228846   \n",
+       "8        2            3       0.442308             0.325962   \n",
+       "9        3            0       0.000000             0.000000   \n",
+       "10       3            1       0.288462             0.151923   \n",
+       "11       3            2       0.269231             0.192308   \n",
+       "\n",
+       "    misclassified_upper  \n",
+       "0              0.501786  \n",
+       "1              0.178571  \n",
+       "2              0.733036  \n",
+       "3              0.000000  \n",
+       "4              0.184191  \n",
+       "5              0.509926  \n",
+       "6              0.000000  \n",
+       "7              0.480769  \n",
+       "8              0.557692  \n",
+       "9              0.000000  \n",
+       "10             0.413942  \n",
+       "11             0.433173  "
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.concat(rows).reset_index(drop=True)[['Origin', 'Destination', 'misclassified', 'misclassified_lower', 'misclassified_upper']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60dec0b6",
    "metadata": {},
    "outputs": [],
    "source": []
