--- a/Scripts/tests_notebook.ipynb
+++ b/Scripts/tests_notebook.ipynb
@@ -946,8 +946,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "60dec0b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cara/anaconda3/envs/2stagemodel/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy\n",
+    "import joblib\n",
+    "import shap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "aeeb7a34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shap_exp_dict = joblib.load(\"/home/cara/Documents/reddit_analyses/thread-size/Test_outputs/1_Thread_Start/conspiracy/4_model/model_5/shap_explainer.jl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "8d1ce5b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = shap_exp_dict[\"X_test\"]\n",
+    "shap_exp = shap_exp_dict[\"explainer\"]\n",
+    "shap_vals = shap_exp(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "22e02272",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>question_ratio</th>\n",
+       "      <th>encoded_author</th>\n",
+       "      <th>avg_word_length</th>\n",
+       "      <th>subject_length</th>\n",
+       "      <th>hour</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.530410</td>\n",
+       "      <td>-0.130665</td>\n",
+       "      <td>-0.438208</td>\n",
+       "      <td>0.076502</td>\n",
+       "      <td>-0.127650</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.239536</td>\n",
+       "      <td>-0.025147</td>\n",
+       "      <td>-0.396594</td>\n",
+       "      <td>-0.511986</td>\n",
+       "      <td>0.649893</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.002010</td>\n",
+       "      <td>0.454964</td>\n",
+       "      <td>-0.121515</td>\n",
+       "      <td>0.853430</td>\n",
+       "      <td>0.272883</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.048221</td>\n",
+       "      <td>-0.093034</td>\n",
+       "      <td>0.418219</td>\n",
+       "      <td>-1.468706</td>\n",
+       "      <td>0.135414</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.703397</td>\n",
+       "      <td>-0.029730</td>\n",
+       "      <td>0.963111</td>\n",
+       "      <td>-0.409357</td>\n",
+       "      <td>0.299801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195</th>\n",
+       "      <td>-0.352225</td>\n",
+       "      <td>0.123636</td>\n",
+       "      <td>-0.573684</td>\n",
+       "      <td>0.674257</td>\n",
+       "      <td>-0.148908</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>1.234176</td>\n",
+       "      <td>0.310022</td>\n",
+       "      <td>0.136743</td>\n",
+       "      <td>0.816985</td>\n",
+       "      <td>0.040226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>0.136550</td>\n",
+       "      <td>0.454469</td>\n",
+       "      <td>0.305125</td>\n",
+       "      <td>0.875259</td>\n",
+       "      <td>-0.067563</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>1.234176</td>\n",
+       "      <td>0.310022</td>\n",
+       "      <td>0.136743</td>\n",
+       "      <td>0.816985</td>\n",
+       "      <td>0.040226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>0.547025</td>\n",
+       "      <td>0.297229</td>\n",
+       "      <td>-0.678135</td>\n",
+       "      <td>0.443729</td>\n",
+       "      <td>-0.133131</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>200 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     question_ratio  encoded_author  avg_word_length  subject_length      hour\n",
+       "0          0.530410       -0.130665        -0.438208        0.076502 -0.127650\n",
+       "1         -0.239536       -0.025147        -0.396594       -0.511986  0.649893\n",
+       "2          0.002010        0.454964        -0.121515        0.853430  0.272883\n",
+       "3          0.048221       -0.093034         0.418219       -1.468706  0.135414\n",
+       "4          0.703397       -0.029730         0.963111       -0.409357  0.299801\n",
+       "..              ...             ...              ...             ...       ...\n",
+       "195       -0.352225        0.123636        -0.573684        0.674257 -0.148908\n",
+       "196        1.234176        0.310022         0.136743        0.816985  0.040226\n",
+       "197        0.136550        0.454469         0.305125        0.875259 -0.067563\n",
+       "198        1.234176        0.310022         0.136743        0.816985  0.040226\n",
+       "199        0.547025        0.297229        -0.678135        0.443729 -0.133131\n",
+       "\n",
+       "[200 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(shap_vals.values, columns=X.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2a6f90f",
    "metadata": {},
    "outputs": [],
    "source": []
