more accurate latex tables

--- a/3_Graphs_Tables/make_tables.ipynb
+++ b/3_Graphs_Tables/make_tables.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "f251f104",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "cdd7c68a",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "id": "e72907dd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "9adf155b",
    "metadata": {},
    "outputs": [],
@@ -66,20 +74,29 @@
     "\n",
     "    latex_str = table.to_latex(\n",
     "        index=False,                    # don’t print the row index\n",
+    "        header=True,\n",
     "        float_format=\"%.4f\",         # control float precision\n",
     "        column_format=\"|l|r|r|r|r|r|r|r|r|\",      # LaTeX alignment (1 left + 8 right)\n",
-    "        caption=\"Tuned thread start LightGBM hyperparameters by number of features.\",\n",
-    "        label=f\"tab:s1-{sub}-hyperparams\",\n",
+    "        #caption=f\"{SUBREDDIT_LABELS[subreddit]} tuned thread start LightGBM hyperparameters by number of features.\",\n",
+    "        #label=f\"tab:s1-{subreddit}-hyperparams\",\n",
     "        escape=False                    # so underscores in col names are not escaped weirdly\n",
     "    )\n",
     "    latex_str = latex_str.replace(r\"\\\\\", r\"\\\\ \\hline\")\n",
     "    to_repl = [r'\\toprule', r'\\midrule', r'\\bottomrule']\n",
     "    for s in to_repl:\n",
     "        latex_str = latex_str.replace(s, \"\")\n",
-    "\n",
+    "    caption = f\"Optimal LightGBM tree hyperparameters selected via cross-validated Optuna/TPE search for each number of features for {SUBREDDIT_LABELS[subreddit]}. Values represent cross-fold aggregated hyperparameters, using the mode for integer parameters and the mean for continuous parameters. These configurations were used for the final thread start model evaluation.\"\n",
+    "    full_latex = (r\"\\paragraph*{S Table.}{\\bf \" +\n",
+    "    f\"{subreddit} tuned thread start LightGBM hyperparameters by number of features.\" +\n",
+    "    r\"\"\"}\n",
+    "    \\label{S-Table.}\n",
+    "    \\begin{table}[!ht]\n",
+    "        \\centering\"\"\" + latex_str + r\"\"\"\n",
+    "    \\end{table}\n",
+    "    \"\"\" + caption)\n",
     "    # Save to file\n",
     "    with open(f\"/home/cara/Documents/reddit_analyses/thread-size/Publication_Outputs/1_Thread_Start/hyperparam_outputs/{subreddit}.txt\", \"w\") as f:\n",
-    "        f.write(latex_str)"
+    "        f.write(full_latex)"
    ]
   },
   {
